fix footer alignment, and page scrolling on mobile

--- a/client/src/styles/StandalonePage.scss
+++ b/client/src/styles/StandalonePage.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    flex-grow: 1;
     margin: 0;
 
     width: 464px;
@@ -111,6 +111,7 @@
 
     .wow-footer {
       margin-top: auto;
+      text-align: center;
       &,
       a {
         font-size: 0.875rem;
