--- a/client/src/styles/UnsubscribePage.scss
+++ b/client/src/styles/UnsubscribePage.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    flex-grow: 1;
     margin-top: 4rem;
     margin-bottom: 1.5rem;
 
